--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
   <meta charset="UTF-8">
   <title>Flappy birds</title>
   <link rel="stylesheet" href="style.css" type="text/css">
-
+  <script src="config.js" defer></script>
   <script src="Background.js" defer></script>
   <script src="Bird.js" defer></script>
   <script src="Column.js" defer></script>
   <script src="index.js" defer></script>
-
 </head>
 <body>
   <header>
