--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
   <link rel="stylesheet" href="style.css" type="text/css">
   <script src="config.js" defer></script>
   <script src="Background.js" defer></script>
-  <script src="Bird.js" defer></script>
   <script src="Column.js" defer></script>
+  <script src="Bird.js" defer></script>
   <script src="index.js" defer></script>
 </head>
 <body>
   <header>
-    <h1>Хлопающая птица</h1>
+    <h1>Flappy bird</h1>
   </header>
   <canvas id="canvas" width="431" height="768"></canvas>
 </body>
