--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="style.css" type="text/css">
   <script src="config.js" defer></script>
   <script src="Background.js" defer></script>
-  <script src="Column.js" defer></script>
+<!--  <script src="Column.js" defer></script>-->
   <script src="Bird.js" defer></script>
   <script src="index.js" defer></script>
 </head>
