Add the counter

--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
   <meta charset="UTF-8">
   <title>Flappy birds</title>
   <link rel="stylesheet" href="style.css" type="text/css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
   <script src="config.js" defer></script>
   <script src="Background.js" defer></script>
 <!--  <script src="Column.js" defer></script>-->
   <script src="Bird.js" defer></script>
+  <script src="Counter.js" defer></script>
   <script src="index.js" defer></script>
 </head>
 <body>
@@ -15,5 +19,6 @@
     <h1>Flappy bird</h1>
   </header>
   <canvas id="canvas" width="431" height="768"></canvas>
+  <div class="score"></div>
 </body>
 </html>
