--- a/index.html
+++ b/index.html
@@ -2,14 +2,17 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Flappy birds</title>
+  <title>Flappy bird</title>
   <link rel="stylesheet" href="style.css" type="text/css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap" rel="stylesheet">
   <script src="config.js" defer></script>
   <script src="Background.js" defer></script>
-<!--  <script src="Column.js" defer></script>-->
+  <script src="Column.js" defer></script>
   <script src="Bird.js" defer></script>
   <script src="Counter.js" defer></script>
   <script src="index.js" defer></script>
@@ -18,7 +21,17 @@
   <header>
     <h1>Flappy bird</h1>
   </header>
-  <canvas id="canvas" width="431" height="768"></canvas>
-  <div class="score"></div>
+  <main class="mainContainer">
+    <canvas id="canvas" width="431" height="768"></canvas>
+    <div class="score"></div>
+    <div class="score bestScore"></div>
+    <div class="scoreTable">
+      <div class="theScore"></div>
+      <div class="theBestScore"></div>
+    </div>
+    <img src="images/start-button.png" alt="start button" class="start-button">
+    <button class="button">Restart</button>
+    <button class="button end-game">End game</button>
+  </main>
 </body>
 </html>
