--- a/index.html
+++ b/index.html
@@ -10,11 +10,15 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap" rel="stylesheet">
+
   <script src="config.js" defer></script>
+
   <script src="Background.js" defer></script>
-  <script src="Column.js" defer></script>
   <script src="Bird.js" defer></script>
+  <script src="Column.js" defer></script>
+
   <script src="Counter.js" defer></script>
+
   <script src="index.js" defer></script>
 </head>
 <body>
@@ -30,7 +34,7 @@
       <div class="theBestScore"></div>
     </div>
     <img src="images/start-button.png" alt="start button" class="start-button">
-    <button class="button">Restart</button>
+    <button class="button restart-button">Restart</button>
     <button class="button end-game">End game</button>
   </main>
 </body>
