Set countdown on start

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <script src="config.js" defer></script>
 
   <script src="Background.js" defer></script>
-  <script src="Bird.js" defer></script>
   <script src="Column.js" defer></script>
+  <script src="Bird.js" defer></script>
 
   <script src="Counter.js" defer></script>
 
@@ -33,9 +33,10 @@
       <div class="theScore"></div>
       <div class="theBestScore"></div>
     </div>
+    <div class="countdown"></div>
     <img src="images/start-button.png" alt="start button" class="start-button">
     <button class="button restart-button">Restart</button>
-    <button class="button end-game">End game</button>
+    <button class="button end-game">Reset</button>
   </main>
 </body>
 </html>
